--- a/deno.json
+++ b/deno.json
@@ -3,5 +3,14 @@
     "@oak/oak": "jsr:@oak/oak@^17.1.5",
     "@tajpouria/cors": "jsr:@tajpouria/cors@^1.2.1",
     "vue-router": "npm:vue-router@^4.5.1"
+  },
+  "tasks": {
+    "dev": "deno task dev:api & deno task dev:vite",
+    "dev:api": "deno run --allow-env --allow-net --allow-read --watch ./api/main.ts",
+    "dev:vite": "deno run -A npm:vite",
+    "build": "deno run -A npm:vite build",
+    "serve": "deno task build && deno task server:start",
+    "server:start": "deno run --allow-env --allow-net --allow-read --watch ./api/main.ts",
+    "preview": "deno run -A npm:vite preview"
   }
 }
