--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@deno/vite-plugin": "^1.0.5",
     "vue": "^3.5.17"
   },
   "devDependencies": {
