--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.5.17"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue": "^5.2.4",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
